--- a/app/views/adherents/index.html.erb
+++ b/app/views/adherents/index.html.erb
@@ -16,7 +16,7 @@
     </div>
 
 
-<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist" >
+<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist" style="margin: 40px;">
   <li class="nav-item" role="presentation">
     <a class="nav-link active" id="pills-tous-tab" data-toggle="pill" href="#pills-tous" role="tab" aria-controls="pills-tous" aria-selected="true">Tous</a>
   </li>
@@ -49,7 +49,7 @@
 
   <div class="tab-pane fade" id="pills-nord" role="tabpanel" aria-labelledby="pills-nord-tab">
 
-      <%# @adherentstri = Adherent.where(departement: "Nord")%>
+      <% @adherentstri = Adherent.where(departement: "Nord")%>
 
         <%= render 'shared/indexadhtri'%>
 
