--- a/app/views/shared/_indexadhtri.html.erb
+++ b/app/views/shared/_indexadhtri.html.erb
@@ -15,13 +15,18 @@
   <tbody>
     <%i = 1%>
 
-    <%Adherent.where(departement: "Nord").each do |a|%>
+    <%@adherentstri.each do |a|%>
       <% u = User.where(id: a.user_id)%>
     <tr>
       <th scope="row"><%=i%></th>
       <td><%=a.nom%></td>
       <td><%=a.prenom%></td>
-      <td><%=a.address%></td>
+      <td><%=a.address%>
+        <% if a.latitude.nil?%>
+         <p><i class="fas fa-exclamation-triangle" style="color:red;">adresse non reconnue</i></p>
+        <%end%>
+
+      </td>
       <td><%=u.last.email%></td>
       <td><%=a.telephone%></td>
       <td>
