--- a/app/views/adherents/_info_window.html.erb
+++ b/app/views/adherents/_info_window.html.erb
@@ -2,6 +2,6 @@
 <p><%= adherent.address %></p>
 <img src="https://maps.googleapis.com/maps/api/streetview?size=200x200&location=<%=adherent.latitude%>,<%=adherent.longitude%>
 &fov=80&heading=70&pitch=0
-&key=AIzaSyDwkx6aZ0MtqJKXBTyNlrh8v1pUUf9UxJ4">
+&key=<%=ENV['GOOGLE_API_KEY'] %>">
 <a href="<%=adherent_path(adherent)%>" class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Voir</a>
 <a href="<%=edit_adherent_path(adherent)%>" class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Modifier</a>
