user devise views

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,15 +1,19 @@
 <div class="card text-center" style="margin: 40px;">
   <div class="card-header">
-    Espace Admin
+    <h1>Espace Admin</h1>
   </div>
   <div class="card-body" style="margin: 40px;">
     <h5 class="card-title">MENU PROVISOIRE</h5>
     <p class="card-text">Fonctions provisoires pendant la réalisation de la plateforme</p>
     <a href="<%=adherents_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des adhérents</a><br>
-    <a href="#" class="btn btn-primary"style="margin: 10px;">Gestion des établissements</a>
+    <a href="#" class="btn btn-primary"style="margin: 10px;">Gestion des établissements</a><br>
+    <a href="#" class="btn btn-primary"style="margin: 10px;">Gestion des messages</a><br>
+    <a href="<%=edit_user_registration_path%>" class="btn btn-primary" style="margin: 10px;">Changer mon mot de passe</a>
+
 
   </div>
   <div class="card-footer text-muted">
-    2 days ago
+    <a href="<%=root_path%>" class="btn btn-primary"style="margin: 10px;">Retour accueil</a>
+
   </div>
 </div>
