--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,9 +35,9 @@
     <form class="form-inline my-2 my-lg-0">
 
       <% if current_user.nil?%>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Espace adhérent</button>
+      <a href="<%=new_user_session_path%>" class="btn btn-outline-success my-2 my-sm-0" >Se connecter</a>
       <%else%>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Se déconnecter</button>
+      <a href="<%=destroy_user_session_path%>" class="btn btn-outline-success my-2 my-sm-0">Se déconnecter</a>
       <%end%>
     </form>
   </div>
