--- a/app/views/adherents/show.html.erb
+++ b/app/views/adherents/show.html.erb
@@ -2,9 +2,7 @@
 <div class="card mb-3" style="margin:40px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="https://maps.googleapis.com/maps/api/streetview?size=200x200&location=<%=@adherent.latitude%>,<%=@adherent.longitude%>
-&fov=80&heading=70&pitch=0
-&key=<%=ENV['GOOGLE_API_KEY']%>" alt="...">
+      <img src="https://maps.googleapis.com/maps/api/streetview?size=200x200&location=<%=@adherent.latitude%>,<%=@adherent.longitude%>&fov=80&heading=70&pitch=0&key=<%=ENV['GOOGLE_API_KEY']%>" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -40,10 +38,10 @@
 
 <div class="tab-content" id="pills-tabContent">
 
+  <div class="tab-pane fade show active" id="pills-situation" role="tabpanel" aria-labelledby="pills-situation-tab">
   <% if @adherent.latitude.nil?%>
     <H2 style="color:red;">Attention l'adresse n'a pas été reconnue, veuillez la vérifier dans l'état-civil.</H2>
   <%else%>
-  <div class="tab-pane fade show active" id="pills-situation" role="tabpanel" aria-labelledby="pills-situation-tab">
     <div style="margin: 40px;">
       <div id="map"
         style="width: 100%; height: 600px;"
@@ -53,10 +51,60 @@
     </div>
   </div>
   <%end%>
+
   <div class="tab-pane fade " id="pills-etablissement" role="tabpanel" aria-labelledby="pills-etablissement-tab">
-
+    <% @etablissement = Etablissement.find_by_id(@adherent.etablissement_id)%>
+    <div class="card text-center" style="margin: 40px;">
+      <div class="card-header">
+        <h2>Etablissement <%=@etablissement.nom%></h2>
+      </div>
+      <div class="card-body text-center">
+        <div class="card-deck ">
+          <div class="card border-dark mb-3" style="max-width: 18rem;">
+            <div class="card-header">Coordonnées</div>
+            <div class="card-body text-dark">
+              <h5 class="card-title">Adresse</h5>
+              <p class="card-text"><%=@etablissement.address%></p>
+              <h5 class="card-title">E-mail</h5>
+              <p class="card-text"><%=@etablissement.address%></p>
+              <h5 class="card-title">Téléphone</h5>
+              <p class="card-text"><%=@etablissement.address%></p>
+            </div>
+          </div>
+          <% adherents = Adherent.where(etablissement_id: @etablissement.id)%>
+          <div class="card border-dark mb-3" style="max-width: 18rem;">
+            <div class="card-header">Adhérents dans l'établissement</div>
+            <div class="card-body text-dark">
+              <% adherents.each do |a|%>
+                <h5 class="card-title">Dr <%=a.nom.upcase%> <%=a.prenom.capitalize%></h5>
+                <a href="<%=adherent_path(a)%>" class="btn btn-secondary btn-sm">Voir la fiche</a>
+              <%end%>
+            </div>
+          </div>
+          <div class="card border-dark mb-3" style="max-width: 18rem;">
+            <div class="card-header">Personnel dans l'établissement</div>
+            <div class="card-body text-dark">
+              <h5 class="card-title">Dark card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+          <div class="card border-dark mb-3" style="max-width: 18rem;">
+            <div class="card-header">Localisation</div>
+            <div class="card-body text-dark">
+              <img src="https://maps.googleapis.com/maps/api/staticmap?center=<%=@etablissement.latitude%>,<%=@etablissement.longitude%>&zoom=14&size=250x250&key=<%=ENV['GOOGLE_API_KEY']%>">
+            </div>
+          </div>
+          <div class="card border-dark mb-3" style="max-width: 18rem;">
+            <div class="card-header">StreetView</div>
+            <div class="card-body text-dark">
+              <img src="https://maps.googleapis.com/maps/api/streetview?size=250x250&location=<%=@etablissement.latitude%>,<%=@etablissement.longitude%>&fov=80&heading=70&pitch=0&key=<%=ENV['GOOGLE_API_KEY']%>" alt="...">
+            </div>
+          </div>
+        </div>
+        <a href="#" class="btn btn-primary" style="margin: 10px;">Voir l'établissement</a>
+      </div>
+    </div>
   </div>
-
   <div class="tab-pane fade " id="pills-civil" role="tabpanel" aria-labelledby="pills-civil-tab" style="margin: 40px;">
 
     <container >
