--- a/app/views/adherents/show.html.erb
+++ b/app/views/adherents/show.html.erb
@@ -101,7 +101,7 @@
             </div>
           </div>
         </div>
-        <a href="#" class="btn btn-primary" style="margin: 10px;">Voir l'établissement</a>
+        <a href="<%=etablissement_path(@etablissement)%>" class="btn btn-primary" style="margin: 10px;">Voir l'établissement</a>
       </div>
     </div>
   </div>
