--- a/app/views/adherents/index.html.erb
+++ b/app/views/adherents/index.html.erb
@@ -1,10 +1,17 @@
 <container style="margin: 40px;">
-<div class="card bg-dark text-white" style="margin: 40px;">
-  <img src="../assets/home1.png" class="card-img" alt="...">
-  <div class="card-img-overlay">
-    <h3 class="card-title" style="text-align: center;">Liste des adhérents</h3>
 
+
+<div class="card text-center" style="margin: 40px;">
+
+  <div class="card-body">
+    <h2 class="card-title">Liste des adhérents</h2>
+    <form style="margin: 40px;">
+      <input type="search" class="form-control" id="" placeholder="Rechercher un adhérent ou un établissement" style="margin: 10px;">
+      <button type="submit" class="btn btn-primary"  style="margin: 10px;">Chercher</button>
+    </form>
+    <a href="#" class="btn btn-danger">Nouvel adhérent</a>
   </div>
+
 </div>
 
 <div style="margin: 40px;">
@@ -49,7 +56,7 @@
 
   <div class="tab-pane fade" id="pills-nord" role="tabpanel" aria-labelledby="pills-nord-tab">
 
-      <% @adherentstri = Adherent.where(departement: "Nord")%>
+      <% @adherentstri = Adherent.where(departement: "Nord").order(:nom)%>
 
         <%= render 'shared/indexadhtri'%>
 
@@ -58,7 +65,7 @@
 
 
   <div class="tab-pane fade" id="pills-pdc" role="tabpanel" aria-labelledby="pills-pdc-tab">
-      <%@adherentstri = Adherent.where(departement: "Pas de Calais")%>
+      <%@adherentstri = Adherent.where(departement: "Pas de Calais").order(:nom)%>
       <%= render 'shared/indexadhtri'%>
 
 
@@ -66,19 +73,19 @@
 
 
   <div class="tab-pane fade" id="pills-somme" role="tabpanel" aria-labelledby="pills-somme-tab">
-    <%@adherentstri = Adherent.where(departement: "Somme")%>
+    <%@adherentstri = Adherent.where(departement: "Somme").order(:nom)%>
       <%= render 'shared/indexadhtri'%>
 
   </div>
 
   <div class="tab-pane fade" id="pills-aisne" role="tabpanel" aria-labelledby="pills-aisne-tab">
-    <%@adherentstri = Adherent.where(departement: "Aisne")%>
+    <%@adherentstri = Adherent.where(departement: "Aisne").order(:nom)%>
       <%= render 'shared/indexadhtri'%>
 
   </div>
 
   <div class="tab-pane fade" id="pills-oise" role="tabpanel" aria-labelledby="pills-oise-tab">
-    <%@adherentstri = Adherent.where(departement: "Oise")%>
+    <%@adherentstri = Adherent.where(departement: "Oise").order(:nom)%>
       <%= render 'shared/indexadhtri'%>
 
   </div>
@@ -90,10 +97,5 @@
 
 
 
-  <div style="margin: 40px;">
-  <div id="map"
-       style="width: 100%; height: 600px;"
-       data-markers="<%= @markers.to_json %>"
-       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-  </div>
+
 </container>
