--- a/app/views/shared/_formulaire.html.erb
+++ b/app/views/shared/_formulaire.html.erb
@@ -1,39 +1,32 @@
 <div class="card bg-light" style="margin: 40px;" >
   <div class="card-body">
-<form>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputEmail4">Nom</label>
-      <input type="last_name" class="form-control" id="inputEmail4">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputPassword4">Prénom</label>
-      <input type="first_name" class="form-control" id="inputPassword4">
-    </div>
+    <% @message = Message.new %>
+    <%= simple_form_for(@message) do |f| %>
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <%= f.input :nom , id:"name",label: false,  type:"text", name:"name", required: true, class: "form-control", placeholder:"Votre nom"%>
+          </div>
+          <div class="form-group col-md-6">
+            <%= f.input :prenom , id:"prenom",label: false,  type:"text", name:"prenom", required: true, class: "form-control", placeholder:"Votre prénom"%>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.input :adresse , id:"address",label: false,  type:"text", name:"adresse", required: true, class: "form-control", placeholder:"Votre adresse"%>
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <%= f.input :email , id:"email",label: false,  type:"text", name:"email", required: true, class: "form-control", placeholder:"Votre E-mail"%>
+          </div>
+          <div class="form-group col-md-6">
+            <%= f.input :telephone , id:"phone",label: false,  type:"text", name:"phone", required: true, class: "form-control", placeholder:"Votre téléphone"%>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.input :content ,label: false,  type:"text", name:"message", required: true, class: "form-control", placeholder:"Écrivez votre message"%>
+        </div>
+        <button type="submit" class="btn btn-outline-dark">Envoyer</button>
+      </form>
+    <%end%>
   </div>
-  <div class="form-group">
-    <label for="inputAddress">Adresse du cabinet</label>
-    <input type="address" class="form-control" id="inputAddress" >
-  </div>
-
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">Email</label>
-      <input type="email" class="form-control" id="inputCity">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputState">Téléphone</label>
-      <input type="phone" class="form-control" id="inputCity">
-    </div>
-
-  </div>
-
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Une demande particulière? C'est ici!</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-
-  <button type="submit" class="btn btn-outline-dark">Envoyer</button>
-</form>
-</div>
 </div>
