--- a/app/views/adherents/index.html.erb
+++ b/app/views/adherents/index.html.erb
@@ -9,7 +9,7 @@
       <input type="search" class="form-control" id="" placeholder="Rechercher un adhérent ou un établissement" style="margin: 10px;">
       <button type="submit" class="btn btn-primary"  style="margin: 10px;">Chercher</button>
     </form>
-    <a href="#" class="btn btn-danger">Nouvel adhérent</a>
+    <a href="<%=new_adherent_path%>" class="btn btn-danger">Nouvel adhérent</a>
   </div>
 
 </div>
