--- a/app/views/etablissements/index.html.erb
+++ b/app/views/etablissements/index.html.erb
@@ -7,7 +7,7 @@
       <input type="search" class="form-control" id="" placeholder="Rechercher un adhérent ou un établissement" style="margin: 10px;">
       <button type="submit" class="btn btn-primary"  style="margin: 10px;">Chercher</button>
     </form>
-    <a href="#" class="btn btn-danger">Nouvel adhérent</a>
+    <a href="<%=new_etablissement_path%>" class="btn btn-danger">Nouvel établissement</a>
   </div>
 
 </div>
