--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -8,6 +8,8 @@
     <a href="<%=adherents_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des adhérents</a><br>
     <a href="<%=etablissements_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des établissements</a><br>
     <a href="<%=messages_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des messages</a><br>
+    <a href="<%=pcrs_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des PCR</a><br>
+
     <a href="<%=edit_user_registration_path%>" class="btn btn-primary" style="margin: 10px;">Changer mon mot de passe</a>
 
 
