--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
         </li>
       <%elsif current_user && current_user.statut == "pcr"%>
         <li class="nav-item">
-          <a class="nav-link " href="<%=pages_pcr_path%>">Mon espace PCR</a>
+          <a class="nav-link " href="<%=pages_pcr_path%>">Mon espace RCP</a>
         </li>
       <%elsif current_user && current_user.statut == "admin"%>
         <li class="nav-item">
