--- a/app/views/pages/pcr.html.erb
+++ b/app/views/pages/pcr.html.erb
@@ -1,1 +1,225 @@
-pcr.html.erb
+<% @pcr = Pcr.where(user_id: current_user.id)%>
+<% @adherents = Adherent.where(pcr: @pcr.last.prenom.capitalize + " " + @pcr.last.nom.upcase)%>
+<% eta = []%>
+<% @adherents.each do |a|%>
+<% eta << a.etablissement_id%>
+<% end%>
+<% @etablissements = Etablissement.where(id: eta) %>
+
+<container>
+
+<div class="card text-center">
+
+  <div class="card-body">
+    <h5 class="card-title">Espace RCP du Dr <%=@pcr.last.prenom.capitalize%> <%=@pcr.last.nom.upcase%></h5>
+    <p class="card-text">Retrouvez ici l'essentiel de vos informations et outils</p>
+    <a href="#" class="btn btn-primary">Débuter un contrôle</a>
+    <form style="margin: 40px;">
+      <input type="search" class="form-control" id="" placeholder="Rechercher un adhérent ou un établissement" style="margin: 10px;">
+      <button type="submit" class="btn btn-primary"  style="margin: 10px;">Chercher</button>
+    </form>
+  </div>
+  <div class="card-footer text-muted">
+    Aujourd'hui nous sommes le <%= Time.now.strftime("%d/%m/%Y") %>
+  </div>
+</div>
+
+<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+  <li class="nav-item" role="presentation">
+    <a class="nav-link active" id="pills-carte-tab" data-toggle="pill" href="#pills-carte" role="tab" aria-controls="pills-carte" aria-selected="true">Ma carte</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="pills-adherent-tab" data-toggle="pill" href="#pills-adherent" role="tab" aria-controls="pills-adherent" aria-selected="false">Mes adherents</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="pills-etablissement-tab" data-toggle="pill" href="#pills-etablissement" role="tab" aria-controls="pills-etablissement" aria-selected="false">Mes établissements</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Mes coordonnées</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="pills-planning-tab" data-toggle="pill" href="#pills-planning" role="tab" aria-controls="pills-planning" aria-selected="false">Mon planning</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="pills-doc-tab" data-toggle="pill" href="#pills-doc" role="tab" aria-controls="pills-doc" aria-selected="false">Mes documents</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="pills-stat-tab" data-toggle="pill" href="#pills-stat" role="tab" aria-controls="pills-stat" aria-selected="false">Mes statistiques</a>
+  </li>
+</ul>
+
+
+
+
+
+<div class="tab-content" id="pills-tabContent">
+
+  <div class="tab-pane fade show active" id="pills-carte" role="tabpanel" aria-labelledby="pills-carte-tab">
+    <div style="margin: 40px;">
+      <% @ma = @etablissements.geocoded.map do |eta|
+      {
+        lat: eta.latitude,
+        lng: eta.longitude,
+        info_window: eta.nom.upcase
+      }
+    end%>
+      <div id="map"
+        style="width: 100%; height: 600px;"
+        data-markers="<%= @ma.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
+    </div>
+  </div>
+
+  <div class="tab-pane fade show " id="pills-adherent" role="tabpanel" aria-labelledby="pills-adherent-tab">
+
+<table class="table" style="margin: 40px;">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nom</th>
+      <th scope="col">Prénom</th>
+      <th scope="col">Adresse</th>
+      <th scope="col">Email</th>
+      <th scope="col">Téléphone</th>
+      <th scope="col">Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <%i = 1%>
+    <%@adherents.order(:nom).each do |a|%>
+      <% u = User.where(id: a.user_id)%>
+    <tr>
+      <th scope="row"><%=i%></th>
+      <td><%=a.nom%></td>
+      <td><%=a.prenom%></td>
+      <td><%=a.address%>
+        <% if a.latitude.nil?%>
+         <p><i class="fas fa-exclamation-triangle" style="color:red;">adresse non reconnue</i></p>
+        <%end%>
+      </td>
+      <td><%=u.last.email%></td>
+      <td><%=a.telephone%></td>
+      <td>
+        <a class="fas fa-pen" href="<%=edit_adherent_path(a)%>" title="Modifier"></a>
+        <a class="fas fa-eye" href="<%=adherent_path(a)%>" title="Voir"></a>
+        <a class="fas fa-trash-alt" href="<%=retirer_pcr_path(adherentid: a.id)%>" onClick="return confirm('Voulez-vous réellement retirer cet adhérent de votre liste ?')" title="Retirer"></a>
+      </td>
+
+    </tr>
+    <% i = i + 1%>
+    <%end%>
+  </tbody>
+</table>
+
+</div>
+
+  <div class="tab-pane fade" id="pills-etablissement" role="tabpanel" aria-labelledby="pills-etablissement-tab">
+
+
+
+<table class="table" style="margin: 40px;">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nom</th>
+
+      <th scope="col">Adresse</th>
+
+      <th scope="col">Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <%i = 1%>
+    <%@etablissements.order(:nom).each do |a|%>
+
+    <tr>
+      <th scope="row"><%=i%></th>
+      <td><%=a.nom%></td>
+
+      <td><%=a.address%>
+        <% if a.latitude.nil?%>
+         <p><i class="fas fa-exclamation-triangle" style="color:red;">adresse non reconnue</i></p>
+        <%end%>
+      </td>
+
+      <td>
+        <a class="fas fa-pen" href="<%=edit_etablissement_path(a)%>" title="Modifier"></a>
+        <a class="fas fa-eye" href="<%=etablissement_path(a)%>" title="Voir"></a>
+
+      </td>
+
+    </tr>
+    <% i = i + 1%>
+    <%end%>
+  </tbody>
+</table>
+
+  </div>
+
+  <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" style="margin: 40px;">
+
+    <%= simple_form_for @pcr.last do |f| %>
+  <form >
+  <div class="form-row">
+    <div class="form-group col-md-4">
+      <%= f.input :nom, type: "Nom", class: "form-control", placeholder: "Nom"%>
+    </div>
+    <div class="form-group col-md-4">
+      <%= f.input :prenom, type: "Prenom", class: "form-control", placeholder: "Prenom"%>
+    </div>
+    <div class="form-group col-md-4">
+      <%= f.input :telephone, type: "Telephone", class: "form-control", placeholder: "Téléphone"%>
+    </div>
+
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-8">
+      <%= f.input :rue, type: "Rue", class: "form-control", placeholder: "Rue", label:"Numéro et rue"%>
+    </div>
+    <div class="form-group col-md-4">
+      <%= f.input :departement, type: "Departement", class: "form-control", placeholder: "Département", collection: ["Nord", "Pas de Calais", "Somme", "Aisne", "Oise"]%>
+    </div>
+
+
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <%= f.input :codepostal, type: "Codepostal", class: "form-control", placeholder: "Code postal"%>
+    </div>
+    <div class="form-group col-md-6">
+      <%= f.input :ville, type: "Ville", class: "form-control", placeholder: "Ville"%>
+    </div>
+
+  </div>
+
+  <div class="form-row">
+    <div class="form-group col-md-12">
+      <%= f.input :email, type: "Email", class: "form-control", placeholder: "Email"%>
+
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary">Modifier</button>
+  <a href="<%=adherents_path%>" class="btn btn-danger">Retour</a>
+</form>
+<%end%>
+
+  </div>
+
+  <div class="tab-pane fade" id="pills-planning" role="tabpanel" aria-labelledby="pills-planning-tab">
+  ...
+  </div>
+
+  <div class="tab-pane fade" id="pills-doc" role="tabpanel" aria-labelledby="pills-doc-tab">
+  ...
+  </div>
+
+  <div class="tab-pane fade" id="pills-stat" role="tabpanel" aria-labelledby="pills-stat-tab">
+  ...
+  </div>
+
+</div>
+
+
+</container>
