--- a/app/views/pages/pcr.html.erb
+++ b/app/views/pages/pcr.html.erb
@@ -18,6 +18,10 @@
       <input type="text" class="form-control" id="title" name="title" placeholder="Rechercher un adhérent ou un établissement" style="margin: 10px;">
       <button type="submit" class="btn btn-primary"  style="margin: 10px;">Chercher</button>
     </form>
+    <%= form_with(url: "/search", method: "post", class: 'form-inline my-2 my-lg-0', local: true) do %>
+    <%= text_field_tag(:q, nil, class: "form-control mr-sm-2", placeholder: "Search") %>
+    <%= button_tag("Search", class: "btn btn-outline-info my-2 my-sm-0", name: nil) %>
+    <% end %>
   </div>
   <div class="card-footer text-muted">
     Aujourd'hui nous sommes le <%= Time.now.strftime("%d/%m/%Y") %>
