fini pour aujourd'hui

--- a/app/views/search/result.html.erb
+++ b/app/views/search/result.html.erb
@@ -6,7 +6,7 @@
 
       <%= form_tag search_path, method: :get do %>
   <%= text_field_tag :"q[nom_or_ville_or_prenom_cont]" %>
-  <%= submit_tag "Search", data: { disable_with: "Searching..." }%>
+  <%= submit_tag "Nouvelle recherche", data: { disable_with: "Searching..." }%>
 <% end %>
   </div>
   <div class="card-footer text-muted">
