--- a/app/views/pages/pcr.html.erb
+++ b/app/views/pages/pcr.html.erb
@@ -13,13 +13,13 @@
   <div class="card-body">
     <h5 class="card-title">Espace RCP du Dr <%=@pcr.last.prenom.capitalize%> <%=@pcr.last.nom.upcase%></h5>
     <p class="card-text">Retrouvez ici l'essentiel de vos informations et outils</p>
-    <a href="#" class="btn btn-primary">Débuter un contrôle</a>
+    <a href="#" class="btn btn-primary" style="margin: 40px;">Débuter un contrôle</a>
 
 
 
     <%= form_tag search_path, method: :get do %>
   <%= text_field_tag :"q[nom_or_ville_or_prenom_cont]" %>
-  <%= submit_tag "Search", data: { disable_with: "Searching..." }%>
+  <%= submit_tag "Chercher", data: { disable_with: "Searching..." }%>
 <% end %>
   </div>
   <div class="card-footer text-muted">
