--- a/app/views/etablissements/_info_window.html.erb
+++ b/app/views/etablissements/_info_window.html.erb
@@ -1,4 +1,4 @@
-<h4><%= etablissement.nom.upcase %> </h4>
+<h6><%= etablissement.nom%> </h6>
 <p><%= etablissement.address %></p>
 <img src="https://maps.googleapis.com/maps/api/streetview?size=200x200&location=<%=etablissement.latitude%>,<%=etablissement.longitude%>
 &fov=80&heading=70&pitch=0
