--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -6,10 +6,14 @@
     <h5 class="card-title">MENU PROVISOIRE</h5>
     <p class="card-text">Fonctions provisoires pendant la réalisation de la plateforme</p>
     <a href="<%=adherents_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des adhérents</a><br>
+    <a href="<%=personnels_path%>" class="btn btn-primary"style="margin: 10px;">Gestion du personnel (non adhérents)</a><br>
     <a href="<%=etablissements_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des établissements</a><br>
     <a href="<%=messages_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des messages</a><br>
     <a href="<%=pcrs_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des PCR</a><br>
+    <a href="<%=generateurbases_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des générateurs</a><br>
+    <a href="<%=capteurbases_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des capteurs</a><br>
 
+    <a href="<%=medecins_path%>" class="btn btn-primary"style="margin: 10px;">Gestion des medecins du travail</a><br>
     <a href="<%=edit_user_registration_path%>" class="btn btn-primary" style="margin: 10px;">Changer mon mot de passe</a>
 
 
