--- a/app/views/adherents/index.html.erb
+++ b/app/views/adherents/index.html.erb
@@ -4,7 +4,7 @@
 <div class="card text-center" style="margin: 40px;">
 
   <div class="card-body">
-    <h2 class="card-title">Liste des adhérents</h2>
+    <h2 class="card-title">Liste des adhérents (<%= Adherent.all.length%>)</h2>
     <form style="margin: 40px;">
       <input type="search" class="form-control" id="" placeholder="Rechercher un adhérent ou un établissement" style="margin: 10px;">
       <button type="submit" class="btn btn-primary"  style="margin: 10px;">Chercher</button>
