--- a/app/views/adherents/show.html.erb
+++ b/app/views/adherents/show.html.erb
@@ -9,7 +9,7 @@
         <h3 class="card-title">Dr <%=@adherent.prenom.capitalize%> <%=@adherent.nom.upcase%></h3>
         <p class="card-text">Adresse : <%=@adherent.address%></p>
         <p class="card-text">Téléphone : <%=@adherent.telephone%></p>
-        <p class="card-text">PCR attitré : Dr <%=@adherent.pcr%></p>
+        <p class="card-text">PCR attitré :</p>
       </div>
     </div>
   </div>
@@ -90,8 +90,27 @@
           <div class="card border-dark mb-3" style="max-width: 18rem;">
             <div class="card-header">Personnel dans l'établissement</div>
             <div class="card-body text-dark">
-              <h5 class="card-title">Dark card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <% personnels = Personnel.where(etablissement_id: @etablissement.id)%>
+
+              <%if personnels.last.nil?%>
+
+              <h5 class="card-title">Pas de personnel</h5>
+
+              <%else%>
+              <% personnels.each do |a|%>
+              <% if a.sexe == "M"%>
+              <h5 class="card-title">Mr <%=a.prenom.capitalize%> <%=a.nom.upcase%></h5>
+              <% elsif a.emploi = "Chirurgien-Dentiste"%>
+              <h5 class="card-title">Dr <%=a.prenom.capitalize%> <%=a.nom.upcase%></h5>
+              <%else%>
+              <h5 class="card-title">Mme <%=a.prenom.capitalize%> <%=a.nom.upcase%></h5>
+
+              <%end%>
+              <%end%>
+              <%end%>
+
+
+              <a href="" class="btn btn-secondary btn-sm">Gérer le personnel</a>
             </div>
           </div>
           <div class="card border-dark mb-3" style="max-width: 18rem;">
@@ -178,28 +197,19 @@
       <%= f.input :tauxhorairesemaine, type: "Horaire", label:"Nombre d'heures par semaine", class: "form-control", placeholder: "Nombre d'heures par semaine"%>
     </div>
     <div class="form-group col-md-4">
-      <%= f.input :emploi, type: "Emploi", class: "form-control", placeholder: "Emploi"%>
+      <%= f.input :statut, type: "Statut", class: "form-control", placeholder: "Statut", collection: ["yes", "no"]%>
     </div>
     <div class="form-group col-md-4">
-      <%= f.input :respactnucleaire, type: "RAN", class: "form-control", placeholder: "Responsable Activité Nucléaire", label:"Responsable Activité Nucléaire", collection: ["oui", "non"]%>
+      <%= f.input :respactnucleaire, type: "RAN", class: "form-control", placeholder: "Responsable Activité Nucléaire", label:"Responsable Activité Nucléaire", collection: ["VRAI", "FAUX", "NC"]%>
     </div>
   </div>
   <div class="form-row">
-    <% @etablissements = Etablissement.all.order(:nom)%>
-    <% @pcrs = Pcr.all.order(:nom)%>
-    <% etablissementsarray = []%>
-    <% pcrsarray = []%>
-    <% @etablissements.each do |e|%>
-      <% etablissementsarray << e.nom%>
-    <%end%>
-    <% @pcrs.each do |e|%>
-      <% pcrsarray << e.prenom.capitalize + " " + e.nom.upcase%>
-    <%end%>
+
     <div class="form-group col-md-6">
-      <%= f.input :etablissement, type: "etablissement", class: "form-control", placeholder: "Etablissement associé", label:"Etablissement associé", collection: etablissementsarray%>
+
     </div>
     <div class="form-group col-md-6">
-      <%= f.input :pcr, type: "pcr", class: "form-control", placeholder: "RCP associé", label:"RCP Associé", collection: pcrsarray%>
+
     </div>
   </div>
   <button type="submit" class="btn btn-primary">Modifier</button>
@@ -212,14 +222,17 @@
   </div>
 
   <div class="tab-pane fade " id="pills-cotisation" role="tabpanel" aria-labelledby="pills-cotisation-tab" style="margin: 40px;">
+    <h1>A VENIR </h1>
 
   </div>
 
   <div class="tab-pane fade " id="pills-contrat" role="tabpanel" aria-labelledby="pills-contrat-tab" style="margin: 40px;">
+    <h1>A VENIR </h1>
 
   </div>
 
   <div class="tab-pane fade " id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" style="margin: 40px;">
+    <h1>A VENIR </h1>
 
   </div>
 
