--- a/app/views/etablissements/index.html.erb
+++ b/app/views/etablissements/index.html.erb
@@ -2,7 +2,7 @@
 <div class="card text-center" style="margin: 40px;">
 
   <div class="card-body">
-    <h2 class="card-title">Liste des établissements</h2>
+    <h2 class="card-title">Liste des établissements (<%=Etablissement.all.length%>)</h2>
     <form style="margin: 40px;">
       <input type="search" class="form-control" id="" placeholder="Rechercher un adhérent ou un établissement" style="margin: 10px;">
       <button type="submit" class="btn btn-primary"  style="margin: 10px;">Chercher</button>
